--- a/f-strings.ipynb
+++ b/f-strings.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d2eed70f",
+   "id": "202eee06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6c6f237a",
+   "id": "46fcf36d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2ddfae67",
+   "id": "4d9f9fd5",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1b4ba967",
+   "id": "b8db2b76",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "74223d3d",
+   "id": "924ed3b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5ed3df94",
+   "id": "6f31ae94",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5a5b0807",
+   "id": "09062f67",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "63168ca4",
+   "id": "f4669f4d",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b1ece3da",
+   "id": "95880eed",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c6a2cc48",
+   "id": "311f6c88",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8c76ba6a",
+   "id": "10657036",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f7a841b7",
+   "id": "b0ddb278",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "165472f9",
+   "id": "ff11f867",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "fc10d7bb",
+   "id": "10b06946",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ff53664a",
+   "id": "c65e41cb",
    "metadata": {},
    "outputs": [
     {
@@ -285,8 +285,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "4c31c8c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My birthday is 30 May, 2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = f'My birthday is {birthday:%d %B, %Y}'\n",
+    "print(sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "fd2e0dc5",
+   "id": "7517ad85",
    "metadata": {},
    "outputs": [],
    "source": []
