--- a/classes-objects1.ipynb
+++ b/classes-objects1.ipynb
@@ -419,6 +419,221 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ba4598b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f376b0ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "68ab86c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.04\n",
+      "1.04\n",
+      "Raise amount changed\n",
+      "1.05\n",
+      "1.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee:\n",
+    "    raise_amount = 1.04\n",
+    "    no_of_emps = 0\n",
+    "    \n",
+    "    def __init__(self,first,last,pay):  # this function is like a constructor\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.pay = pay\n",
+    "        self.email = first.lower()+'.'+last.lower()+'@gmail.com'\n",
+    "        Employee.no_of_emps+=1\n",
+    "        \n",
+    "    def fullname(self):\n",
+    "        print(f\"This employee's full name is {self.first} {self.last}\")\n",
+    "    \n",
+    "    def apply_raise(self):\n",
+    "        self.pay = int(self.pay * self.raise_amount)\n",
+    "        \n",
+    "    @classmethod          \n",
+    "    def set_raise_amount(cls, amt):   # class method\n",
+    "        cls.raise_amount = amt\n",
+    "    \n",
+    "emp1 = Employee('Ananay','Srivastava',10000)\n",
+    "emp2 = Employee('Shivang','Chaturvedi',15000)\n",
+    "\n",
+    "print(Employee.raise_amount)\n",
+    "print(emp1.raise_amount)\n",
+    "Employee.set_raise_amount(1.05)\n",
+    "#emp1.set_raise_amount(1.05) this will work the same way as the above one\n",
+    "print('Raise amount changed')\n",
+    "print(Employee.raise_amount)\n",
+    "print(emp2.raise_amount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a05bd9e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Way 1:\n",
+      "This employee's full name is Aman Srivastava\n",
+      "Way 2:\n",
+      "This employee's full name is Jyoti Sinha\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee:\n",
+    "    raise_amount = 1.04\n",
+    "    no_of_emps = 0\n",
+    "    \n",
+    "    def __init__(self,first,last,pay):  # this function is like a constructor\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.pay = pay\n",
+    "        self.email = first.lower()+'.'+last.lower()+'@gmail.com'\n",
+    "        Employee.no_of_emps+=1\n",
+    "        \n",
+    "    def fullname(self):\n",
+    "        print(f\"This employee's full name is {self.first} {self.last}\")\n",
+    "    \n",
+    "    def apply_raise(self):\n",
+    "        self.pay = int(self.pay * self.raise_amount)\n",
+    "        \n",
+    "    @classmethod          \n",
+    "    def set_raise_amount(cls, amt):   # class method\n",
+    "        cls.raise_amount = amt    \n",
+    "       \n",
+    "    @classmethod\n",
+    "    def from_string(cls,emp_str):\n",
+    "        first,last,pay = emp_str.split('-')\n",
+    "        return cls(first,last,pay)\n",
+    "    \n",
+    "emp1 = Employee('Ananay','Srivastava',10000)\n",
+    "emp2 = Employee('Shivang','Chaturvedi',15000)\n",
+    "\n",
+    "emp_str_3 = 'Aman-Srivastava-17000'\n",
+    "emp_str_4 = 'Jyoti-Sinha-25000'\n",
+    "\n",
+    "# way 1\n",
+    "print('Way 1:')\n",
+    "first,last,pay = emp_str_3.split('-')\n",
+    "emp3 = Employee(first,last,pay)\n",
+    "emp3.fullname()\n",
+    "\n",
+    "# way 2 \n",
+    "print('Way 2:')\n",
+    "emp4 = Employee.from_string(emp_str_4)\n",
+    "emp4.fullname()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a28cedb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d7cefa87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# static methods \n",
+    "# static methods are created when a method doesnt need an instance of a class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ffcff1cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee:\n",
+    "    raise_amount = 1.04\n",
+    "    no_of_emps = 0\n",
+    "    \n",
+    "    def __init__(self,first,last,pay):  # this function is like a constructor\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.pay = pay\n",
+    "        self.email = first.lower()+'.'+last.lower()+'@gmail.com'\n",
+    "        Employee.no_of_emps+=1\n",
+    "        \n",
+    "    def fullname(self):\n",
+    "        print(f\"This employee's full name is {self.first} {self.last}\")\n",
+    "    \n",
+    "    def apply_raise(self):\n",
+    "        self.pay = int(self.pay * self.raise_amount)\n",
+    "        \n",
+    "    @classmethod          \n",
+    "    def set_raise_amount(cls, amt):   # class method\n",
+    "        cls.raise_amount = amt    \n",
+    "       \n",
+    "    @classmethod\n",
+    "    def from_string(cls,emp_str):\n",
+    "        first,last,pay = emp_str.split('-')\n",
+    "        return cls(first,last,pay)\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def is_workday(day):\n",
+    "        if day.weekday()==5 or day.weekday()==6:\n",
+    "            return False\n",
+    "        return True\n",
+    "    \n",
+    "emp1 = Employee('Ananay','Srivastava',10000)\n",
+    "emp2 = Employee('Shivang','Chaturvedi',15000)\n",
+    "\n",
+    "\n",
+    "import datetime\n",
+    "my_date = datetime.date(2021,8,20)\n",
+    "print(Employee.is_workday(my_date))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcb96795",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
